# HTTP1.0-Client-Server

./: CMakeLists.txt  README.md  Utils.cpp  echo-client.cpp  ipconf.cpp  socketclient.cpp  socketserver.cpp  webClient.cpp  webServer.cpp
RequestHeaders/: CMakeLists.txt  reqHeader.cpp  reqHeader.h
Resource/: CMakeLists.txt  Resource.cpp  Resource.h  Utils.cpp  Utils.h  reqHeader.cpp  reqHeader.h
